src/objects/acet_test_limits_for_listView__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This includes starting and ending limits in the iterator for the test class - PLT_ListViewTestV2. This runs for all active user context to get all stats</description>
    <fields>
        <fullName>Iteration_Starting_Number__c</fullName>
        <description>This value is used as the iteration starting value.</description>
        <label>Iteration Starting Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Iteration_Stop_Number__c</fullName>
        <description>This value is used to terminate the iteration.</description>
        <label>Iteration Stop Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jenkins_Username__c</fullName>
        <description>This user will be ignored for Active users</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Jenkins Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>ACET Test Limits For ListView</label>
</CustomObject>